--- a/01-bookdown.Rmd
+++ b/01-bookdown.Rmd
@@ -236,15 +236,15 @@ if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.github.io
 ```
 
 ### Demo: R code-chunk for GIF animation and static image {-}
-TODO: FIX: the custom script 50% width setting works in Chrome, but not FFox, perhaps because it's not really an iframe?
+TODO: FIX to make this appear consistently in all browsers.
 
 ...as shown in Figure \@ref(fig:excel-drag).
 
-(ref:excel-drag) Caption here, with embedded link to [animated GIF](https://handsondataviz.org/images/02-spreadsheet/excel-drag-consec.gif).
+(ref:excel-drag) Caption here, with embedded link to [animated GIF](https://handsondataviz.github.io/bookdown-template/excel-drag.gif).
 
-<!-- set iframe 450px height 50% width in custom-scripts.html -->
+<!-- set iframe 450px height in custom-scripts.html -->
 ```{r excel-drag, fig.cap="(ref:excel-drag)"}
-if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.org/images/02-spreadsheet/excel-drag-consec.gif") else knitr::include_graphics("images/excel-drag.png")
+if(knitr::is_html_output()) knitr::include_url("https://handsondataviz.github.io/bookdown-template/excel-drag.gif") else knitr::include_graphics("images/excel-drag.png")
 ```
 
 ### Demo: R code-chunk for Youtube video and static image {-}
